--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #fcead7;
+    background-color: #81ADC8;
     color: #333;
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-    background-color: white;
+    background-color: #F8F2DC;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -22,7 +22,7 @@ body {
 .headerText {
     font-size: 24px;
     margin-bottom: 20px;
-    color: #4CAF50;
+    color: #9E6240;
 }
 
 #taskInput {
@@ -36,7 +36,7 @@ body {
 
 #addTaskBtn {
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #9E6240;
     color: white;
     border: none;
     border-radius: 5px;
@@ -46,7 +46,7 @@ body {
 }
 
 #addTaskBtn:hover {
-    background-color: #45a049;
+    background-color: #86563b;
 }
 
 #taskList {
