--- a/index.css
+++ b/index.css
@@ -8,19 +8,88 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url('/images/simple_natural_landscape_pixel_art_background/origbig.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container {
     background-color: #F8F2DC;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     text-align: center;
     width: 300px;
 }
 
+.herocontainer {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.hero {
+    width: 100%;
+    height: 250px;
+    background: rgb(47, 47, 47);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 0 0 25px 0;
+}
+
+.card {
+    background-color: black;
+    background-image: url('images/simple_nature_pixel_background_for_video_game/Background/Summer5.png');
+    background-size: cover;
+    padding: 20px;
+    width: 70%;
+    height: 60%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card h1 {
+    font-size: 20px;
+    color: #9E6240;
+    margin-bottom: 10px;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+.card img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.card label {
+    display: block;
+    width: 130px;
+    background: #9E6240;
+    color: white;
+    padding: 5px;
+    margin: 10px auto;
+    margin-bottom: 0;
+    margin-top: 15px;
+    font-size: 12px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.card input {
+    display: none;
+}
+
 .headerText {
     font-size: 24px;
+    margin-top: 10px;
     margin-bottom: 20px;
     color: #9E6240;
 }
