--- a/index.css
+++ b/index.css
@@ -191,6 +191,29 @@ body {
     background-color: #832727;
 }
 
+.menuContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 5px;
+}
+
+.menuBtn {
+    width: 45px;
+    height: 12px;
+    background-color: #444;
+    border: 2px solid #333;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+}
+
+.menuBtn:active {
+    background-color: #222;
+}
+
 .hidden {
     display: none;
 }
