--- a/index.css
+++ b/index.css
@@ -92,10 +92,22 @@ body {
     text-shadow: 1px 1px 1px #000000;
 }
 
-.card img {
-    width: 80px;
-    height: 80px;
+#profilePic {
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
+    z-index: 2;
+    position: relative;
+    margin-bottom: 35px;
+}
+
+.knight {
+    z-index: 1;
+    display: flex;
+    position: absolute;
+    left: 300px;
+    top: 184px;
+    width: 120px;
 }
 
 .card label {
