--- a/index.css
+++ b/index.css
@@ -83,10 +83,16 @@ body {
     justify-content: center;
 }
 
+.progressContainerItems {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .card h1 {
     font-size: 20px;
     color: white;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     font-weight: bold;
     margin-top: 0;
     text-shadow: 1px 1px 1px #000000;
@@ -97,17 +103,16 @@ body {
     height: 50px;
     border-radius: 50%;
     z-index: 2;
-    position: relative;
-    margin-bottom: 35px;
+    position: absolute;
+    margin-right: 10px;
+    margin-top: 30px;
 }
 
 .knight {
     z-index: 1;
-    display: flex;
-    position: absolute;
-    left: 300px;
-    top: 184px;
     width: 120px;
+    margin-left: 6px;
+    margin-top: 5px;
 }
 
 .card label {
@@ -116,9 +121,8 @@ body {
     background: #9E6240;
     color: white;
     padding: 4px;
-    margin: 10px auto;
     margin-bottom: 0;
-    margin-top: 8px;
+    margin-top: 1px;
     font-size: 12px;
     border-radius: 5px;
     cursor: pointer;
@@ -132,7 +136,7 @@ body {
 .card h2 {
     font-size: 20px;
     color: white;
-    margin-top: 5px;
+    margin-top: 3px;
     margin-bottom: 0;
     text-shadow: 1px 1px 1px #000000;
 }
