--- a/index.css
+++ b/index.css
@@ -246,6 +246,7 @@ body {
 
 #taskContainer {
     opacity: 1;
+    margin-top: 5px;
 }
 
 #taskInput {
@@ -292,7 +293,7 @@ li:hover {
     background-color: #e0f7fa;
 }
 
-.shopItems {
+.shopItems,.settingsItems {
     border: 5px solid #ccc;
     padding: 10px;
     display: flex;
@@ -300,7 +301,7 @@ li:hover {
     margin-top: 15px;
 }
 
-.shopItems h2 {
+.shopItems h2,.settingsItems h2 {
     font-size: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -311,7 +312,7 @@ li:hover {
     font-size: 15px;
 }
 
-.shop-item {
+.shop-item,.settings-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
